steal most of Term::ANSIColor::Simple
We're doing the same thing, essentially...  Just autoboxing it, here.

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = autobox-Colors
 author  = Chris Weyl <cweyl@alumni.drew.edu>
-license = LGPL_2_1
+license = Perl_5
 copyright_holder = Chris Weyl
 copyright_year   = 2013
 
